# automatic-umbrella

./: .gitignore  README.md  librarian.py  pyproject.toml  reference_test.py
notebooks/: sbc.ipynb
qdrant_data/: meta.json
src/: config.py  fc-ultimate-team.py  login.py  main.py  sbc.py  sbc_helpers.py  setup.py  store.py  utilities.py
