[tool.poetry]
name = "automatic-umbrella"
version = "0.1.0"
description = ""
authors = ["John Swaynos <jpswaynos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
llama-index = "^0.10.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
