[tool.poetry]
name = "automatic-umbrella"
version = "0.1.0"
description = ""
authors = ["John Swaynos <jpswaynos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
llama-index = "^0.10.11"
qdrant-client = "^1.7.3"
pypdf = "^4.0.2"
transformers = "^4.38.1"
torch = "^2.2.1"
llama-index-embeddings-huggingface = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
